[package]
name = "libp2p-server"
version = "0.7.0"
authors = ["Max Inden <mail@max-inden.de>"]
edition = "2018"
description = "A rust-libp2p server binary."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.12.0"
base64 = "0.13"
env_logger = "0.9.0"
futures = "0.3.23"
futures-timer = "3"
libp2p = { version = "0.47.0", default-features = false, features = ["autonat", "dns-async-std", "noise", "tcp-async-io", "yamux", "identify", "kad", "ping", "relay", "metrics"] }
log = "0.4"
prometheus-client = "0.16.0"
serde = "1.0.143"
serde_derive = "1.0.125"
serde_json = "1.0"
structopt = "0.3.26"
tide = "0.16"
zeroize = "1"
